<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".post_activities.TaskcardSelectActivity">

    <LinearLayout
        android:id="@+id/TaskcardLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/taskcardToolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/theme_teal"
            android:elevation="4dp"
            app:buttonGravity="center_vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Spinner
                    android:id="@+id/spnIdStatusBase"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:background="@drawable/base_background"
                    android:contentDescription="base_select"
                    android:minWidth="48dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/btIdStatusLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/loginbtn_background"
                    android:text="@string/main_logout"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskcardLinearLayout">

        <TextView
            android:id="@+id/tvIdTaskcardTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/taskcard_select"
            android:textColor="@color/text_color"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="396dp"
            tools:layout_editor_absoluteY="96dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdCheckedDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:text="@string/taskcard_date"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btIdDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/datepicker_background"
                android:hint="@string/taskcard_selectday"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdTaskcard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:text="@string/taskcard_taskcard"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btIdTaskcard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/spinner_background"
                android:hint="@string/taskcard_date_first"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdLocation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:text="@string/taskcard_location"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btIdLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/spinner_background"
                android:hint="@string/taskcard_taskcard_first"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdAttach"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:text="@string/taskcard_attach"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btIdAttach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/spinner_background"
                android:hint="@string/taskcard_location_first"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btIdTaskcardBackHome"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/gray"
            android:drawableTop="@drawable/homebtn_background"
            android:paddingTop="10dp"
            android:text="@string/post_backhome"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btIdTaskcardNext"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@color/theme_teal"
            android:text="@string/post_next"
            android:textColor="@color/white"
            android:textSize="28sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>