<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".post_activities.PostActivity">

    <LinearLayout
        android:id="@+id/postLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/postToolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/theme_teal"
            android:elevation="4dp"
            app:buttonGravity="center_vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Spinner
                    android:id="@+id/spnIdPostBase"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:background="@drawable/base_background"
                    android:contentDescription="base_select"
                    android:minWidth="48dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/btIdPostLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/loginbtn_background"
                    android:text="@string/main_logout"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/tvIdPostTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/post_select"
            android:textColor="@color/more_info"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="396dp"
            tools:layout_editor_absoluteY="96dp" />

        <RadioGroup
            android:id="@+id/rgIdPostType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <RadioButton
                android:id="@+id/rbIdNew"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@drawable/radiobtn_type_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="RadioButton" />

            <TextView
                android:id="@+id/tvIdPostNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/post_new"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/rbIdEdit"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:background="@drawable/radiobtn_type_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="RadioButton" />

            <TextView
                android:id="@+id/tvIdPostEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/post_edit"
                android:textSize="26sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btIdPostBackHome"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/gray"
            android:drawableTop="@drawable/homebtn_background"
            android:paddingTop="10dp"
            android:text="@string/post_backhome"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btIdPostNext"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@color/theme_teal"
            android:text="@string/post_next"
            android:textColor="@color/white"
            android:textSize="28sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>